--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../components/layout/Layout.astro';
 import IssueCoverCard from '../components/issues/IssueCoverCard.astro';
 import { getCollection, getEntry } from 'astro:content';
-import { getPostsForIssue } from '../lib/contentSource';
+import { getPostsForIssue } from '../lib/data';
 import { coverLinesFromPosts } from '../lib/lineup';
 
 // Get featured publications
