--- a/src/components/layout/Layout.astro
+++ b/src/components/layout/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Analytics from '@vercel/analytics/astro';
+import Analytics from './Analytics.astro';
 import MastheadBar from './MastheadBar.astro';
 import type { CollectionEntry } from 'astro:content';
 
